<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yang="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_discard"
        android:icon="@drawable/ic_delete_white_24px"
        android:orderInCategory="49"
        android:title="@string/discard"
        yang:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24px"
        android:orderInCategory="50"
        android:title="@string/share"
        yang:showAsAction="always" />
</menu>