<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yang="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_puzzle_storage"
        android:icon="@drawable/ic_storage_white_24px"
        android:orderInCategory="49"
        android:title="@string/puzzle_storage"
        yang:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_white_24px"
        android:orderInCategory="50"
        android:title="@string/settings"
        yang:showAsAction="always" />
</menu>
