<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yang="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all_white_24px"
        android:orderInCategory="49"
        android:title="@string/select_all"
        yang:showAsAction="always" />

    <item
        android:id="@+id/menu_import_puzzle"
        android:icon="@drawable/ic_file_download_white_24px"
        android:orderInCategory="50"
        android:title="@string/import_puzzle"
        yang:showAsAction="always" />
</menu>